<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_background" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/premises_header"
        android:layout_alignParentTop="true"
        android:id="@+id/text_view_about_title2" />
    
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_alignParentBottom="true" >
        
        <Button 
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button4"
			android:onClick="previousPage" />
        
        <Button 
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button5"
			android:onClick="nextPage" />
    </LinearLayout>
    
    <ScrollView
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_about_title2"
        android:layout_above="@id/buttons" >
        
        <LinearLayout 
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical" >

		    <TextView
		        android:id="@+id/text_view_premise1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:textSize="18sp"
		        android:text="@string/premise1" />
		    
		    <TextView
		        android:id="@+id/text_view_premise1_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:text="@string/premise1_text" />
		    
		    <TextView
		        android:id="@+id/text_view_premise2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:textSize="18sp"
		        android:text="@string/premise2" />
		    
		    <TextView
		        android:id="@+id/text_view_premise2_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:text="@string/premise2_text" />
		    
		    <TextView
		        android:id="@+id/text_view_premise3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:textSize="18sp"
		        android:text="@string/premise3" />
		    
		    <TextView
		        android:id="@+id/text_view_premise3_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:text="@string/premise3_text" />
    
    	</LinearLayout>
    </ScrollView>

</RelativeLayout>